# MADS-ML-Heart

./: .gitignore  .lefthook.yml  README.md  pyproject.toml
data/: heart_big_test.parq  heart_big_train.parq  heart_test.parq  heart_train.parq
dev/: Makefile  hypertune.py  minimal_ray.py
notebooks/: 01_explore-heart.ipynb  02_2D-models.ipynb  03_1D-models.ipynb  04_modeltest.ipynb  Makefile  config.toml  start_server.sh
src/: datasets.py  hypertune_CNN.py  hypertune_RNN.py  metrics.py  models.py
