[project]
name = "MADS-exam-25"
version = "0.1.0"
description = "Code for MADS deep learning exam"
authors = [
    {name = "Raoul Grouls", email = "Raoul.Grouls@han.nl"},
]
dependencies = [
    "mads-datasets>=0.3.10",
    "seaborn>=0.13.1",
    "hpbandster>=0.7.4",
    "ConfigSpace>=0.7.1",
    "torch-tb-profiler>=0.4.3",
    "tensorboard>=2.16.2",
    "mlflow>=2.13.2",
    "mltrainer>=0.1.129",
    "hyperopt>=0.2.7",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "jupyter>=1.1.1",
    "mypy>=1.14.1",
    "pyright>=1.1.391",
    "ruff>=0.9.1",
]

[tool.rye]
managed = true
dev-dependencies = [
    "isort>=5.13.2",
    "jupyter>=1.1.1",
    "pyright>=1.1.391",
    "ruff>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]

